<resources>
    <string name="app_name">Happy Places</string>
    <string name="add_button">Add button</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="save">SAVE</string>
    <string name="update">UPDATE</string>
    <string name="place_s_image">Place\'s image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_api_key">AIzaSyB_9Rw6kiv6i_97OTTiuWYK6S0xnUVmT_U</string>
</resources>