<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddPlacesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbAddPlace"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/indigo_500"
        android:theme="@style/CustomToolBarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:title="Toolbar Title" />

    <ScrollView
        android:id="@+id/svAddPlace"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbAddPlace">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/indigo_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:inputType="textCapWords"
                    android:textColor="@color/indigo_500"
                    android:textColorHint="@color/indigo_400"
                    android:textSize="@dimen/text_base" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/indigo_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="textCapWords"
                    android:textColor="@color/indigo_500"
                    android:textColorHint="@color/indigo_400"
                    android:textSize="@dimen/text_base" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/indigo_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilDescription">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="textCapWords"
                    android:textColor="@color/indigo_500"
                    android:textColorHint="@color/indigo_400"
                    android:textSize="@dimen/text_base" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/indigo_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilDate">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:inputType="textCapWords"
                    android:textColor="@color/indigo_500"
                    android:textColorHint="@color/indigo_400"
                    android:textSize="@dimen/text_base" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPlace"
                android:layout_width="match_parent"
                android:layout_height="@dimen/md_16"
                android:layout_margin="@dimen/sm_2"
                android:background="@drawable/shape_rectangle_stroke"
                android:padding="@dimen/sm_1"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image_placeholder_240"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilLocation" />

            <TextView
                android:id="@+id/tvAddImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/sm_6"
                android:text="@string/add_image"
                android:textColor="@color/indigo_300"
                android:textSize="@dimen/text_base"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/ivPlace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btnSave" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/sm_2"
                android:layout_marginTop="@dimen/sm_6"
                android:padding="@dimen/sm_4"
                android:background="@drawable/shape_rectangle_solid_rounded"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/text_base"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddImage"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>